# agentic-imodels-harness

./: .gitignore  AGENTS.md  README.md  Taskfile.yml  agentic-imodels-sample.code-workspace  pyproject.toml
.codex/agents/: experiment-auditor.md  experiment-planner.md  experiment-runner.md  interpretability-judge.md  mechanism-mapper.md  model-designer.md  paper-analyst.md  quickstart-runner.md  result-analyst.md
.codex/skills/agentic-imodels-paper/: SKILL.md
.codex/skills/agentic-imodels-paper/references/: mechanism-mapping.md  paper-knowledge.md  reproduction-checklist.md
.codex/skills/agentic-imodels-quickstart/: SKILL.md
.codex/skills/agentic-imodels-quickstart/references/: setup-checklist.md
.codex/skills/agentic-imodels-scaffold-project/: SKILL.md
.codex/skills/agentic-imodels-scaffold-project/scripts/: scaffold_project.py
.codex/skills/agentic-imodels-toy-experiment/: SKILL.md
projects/: __init__.py
projects/synthetic_regression/: __init__.py  datasets.py  project.py  run_experiment.py  spec.py
projects/synthetic_regression/data/: metadata.json  sample_submission.csv  test.csv  train.csv  valid.csv
projects/synthetic_regression/experiments/: __init__.py  candidate_model.py
projects/synthetic_regression/results/: leaderboard.csv
tests/: test_evaluation.py
toy_imodels/: __init__.py  audit.py  compare_loop_runs.py  leaderboard.py  loop_run.py  loops.py  metrics.py  provenance.py  reports.py  spec.py
toy_imodels/core/: __init__.py  candidate.py  evaluation.py  project.py
toy_imodels/interpretability/: __init__.py  evaluator.py
(+185 files in other folders)
